--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>פרויקט מסדי נתונים - ספרייה</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=8" />
 </head>
 
 <body>
@@ -16,6 +16,7 @@
       <p class="subtitle">
         נתונים נשאבים מה־MySQL דרך API (Node.js) ומתעדכנים לפי מה שקיים במסד הנתונים.
       </p>
+
       <div class="meta">
         <span class="pill">MySQL</span>
         <span class="pill">Node.js API</span>
@@ -37,7 +38,7 @@
 
         <div class="controls">
           <div class="actions">
-            <button class="btn btn--primary" id="btnLoadBooks">
+            <button class="btn btn--primary" id="btnBooks">
               <span class="btn__text">רשימת ספרים</span>
               <span class="spinner spinner--btn" aria-hidden="true"></span>
             </button>
@@ -67,7 +68,7 @@
           לחצי על <b>רשימת ספרים</b> כדי לטעון את הנתונים מה־DB.
         </div>
 
-        <div id="booksTableWrap" class="tableWrap" style="display:none;"></div>
+        <div id="booksWrap" class="tableWrap" style="display:none;"></div>
       </section>
 
       <!-- PARTICIPANTS -->
@@ -77,7 +78,7 @@
         </div>
 
         <div class="actions">
-          <button class="btn" id="btnLoadParticipants">
+          <button class="btn" id="btnParticipants">
             <span class="btn__text">הצג משתתפים</span>
             <span class="spinner spinner--btn" aria-hidden="true"></span>
           </button>
@@ -99,15 +100,11 @@
     const API_BASE = "https://final-project-1-4tg9.onrender.com";
 
     async function fetchJson(path) {
-      const url = API_BASE + path;
-      const res = await fetch(url);
-      const contentType = res.headers.get("content-type") || "";
+      const res = await fetch(API_BASE + path);
+      const ct = res.headers.get("content-type") || "";
       const text = await res.text();
-
       if (!res.ok) throw new Error(text || ("HTTP " + res.status));
-      if (!contentType.includes("application/json")) {
-        throw new Error("השרת לא החזיר JSON. כנראה API_BASE לא נכון או שהשרת לא רץ.");
-      }
+      if (!ct.includes("application/json")) throw new Error("השרת לא החזיר JSON (בדקי API_BASE/שרת).");
       return JSON.parse(text);
     }
 
@@ -120,43 +117,84 @@
         .replaceAll("'", "&#039;");
     }
 
-    function setBtnLoading(btn, isLoading, loadingText) {
+    function setBtnLoading(btn, on, txt) {
       const t = btn.querySelector(".btn__text");
-      const spinner = btn.querySelector(".spinner--btn");
-      if (isLoading) {
-        btn.classList.add("is-loading");
+      const s = btn.querySelector(".spinner--btn");
+      if (on) {
         btn.disabled = true;
-        if (loadingText) t.textContent = loadingText;
-        spinner.style.display = "inline-block";
+        btn.classList.add("is-loading");
+        if (txt) t.textContent = txt;
+        s.style.display = "inline-block";
       } else {
-        btn.classList.remove("is-loading");
         btn.disabled = false;
-        spinner.style.display = "none";
+        btn.classList.remove("is-loading");
+        s.style.display = "none";
       }
     }
 
-    // ---------- BOOKS ----------
-    const btnLoadBooks = document.getElementById("btnLoadBooks");
+    // Hide spinners initially
+    document.querySelectorAll(".spinner--btn").forEach(x => x.style.display = "none");
+
+    // ---- State ----
+    let openPanel = null; // "books" | "participants" | null
+
+    // Books cache
+    let booksLoaded = false;
+    let allBooks = [];
+
+    // Participants cache
+    let participantsLoaded = false;
+    let participantsCache = [];
+
+    // ---- DOM ----
+    const btnBooks = document.getElementById("btnBooks");
     const booksStatus = document.getElementById("booksStatus");
-    const booksTableWrap = document.getElementById("booksTableWrap");
+    const booksWrap = document.getElementById("booksWrap");
+    const booksCounter = document.getElementById("booksCounter");
     const searchInput = document.getElementById("searchInput");
     const sortSelect = document.getElementById("sortSelect");
-    const booksCounter = document.getElementById("booksCounter");
 
-    let allBooks = [];
-    let booksOpen = false;
-    let booksLoadedOnce = false;
-    let booksLoadingNow = false;
+    const btnParticipants = document.getElementById("btnParticipants");
+    const participantsStatus = document.getElementById("participantsStatus");
+    const participantsList = document.getElementById("participantsList");
 
-    function renderBooksTable(rows) {
+    // ---- Helpers open/close ----
+    function closeBooks() {
+      booksWrap.style.display = "none";
+      booksWrap.innerHTML = "";
+      booksCounter.style.display = "none";
+      searchInput.value = "";
+      searchInput.disabled = true;
+      sortSelect.disabled = true;
+      btnBooks.querySelector(".btn__text").textContent = "רשימת ספרים";
+      booksStatus.innerHTML = `לחצי על <b>רשימת ספרים</b> כדי לטעון את הנתונים מה־DB.`;
+      if (openPanel === "books") openPanel = null;
+    }
+
+    function closeParticipants() {
+      participantsList.style.display = "none";
+      participantsList.innerHTML = "";
+      btnParticipants.querySelector(".btn__text").textContent = "הצג משתתפים";
+      participantsStatus.innerHTML = `לחצי על <b>הצג משתתפים</b> כדי להציג את הרשימה.`;
+      if (openPanel === "participants") openPanel = null;
+    }
+
+    function openOnly(panel) {
+      if (panel === "books" && openPanel === "participants") closeParticipants();
+      if (panel === "participants" && openPanel === "books") closeBooks();
+      openPanel = panel;
+    }
+
+    // ---- Books rendering ----
+    function renderBooks(rows) {
       if (!rows || rows.length === 0) {
-        booksTableWrap.innerHTML = "";
-        booksCounter.style.display = "none";
         booksStatus.innerHTML = "<span class='error'>לא נמצאו ספרים.</span>";
+        booksWrap.innerHTML = "";
+        booksCounter.style.display = "none";
         return;
       }
 
-      booksTableWrap.innerHTML = `
+      booksWrap.innerHTML = `
         <table class="table">
           <thead>
             <tr>
@@ -186,9 +224,8 @@
       booksStatus.innerHTML = `<span class="ok">נטענו ${rows.length} ספרים בהצלחה.</span>`;
     }
 
-    function applySearchAndSort() {
+    function applySearchSort() {
       let rows = [...allBooks];
-
       const q = (searchInput.value || "").trim().toLowerCase();
       if (q) {
         rows = rows.filter(b => {
@@ -199,167 +236,122 @@
       }
 
       const v = sortSelect.value;
-      const getNum = (x) => Number(x ?? 0);
+      const num = (x) => Number(x ?? 0);
 
       rows.sort((a, b) => {
         switch (v) {
-          case "product_id_asc": return getNum(a.product_id) - getNum(b.product_id);
-          case "product_id_desc": return getNum(b.product_id) - getNum(a.product_id);
-          case "price_asc": return getNum(a.price) - getNum(b.price);
-          case "price_desc": return getNum(b.price) - getNum(a.price);
-          case "pages_asc": return getNum(a.number_of_pages) - getNum(b.number_of_pages);
-          case "pages_desc": return getNum(b.number_of_pages) - getNum(a.number_of_pages);
+          case "product_id_asc": return num(a.product_id) - num(b.product_id);
+          case "product_id_desc": return num(b.product_id) - num(a.product_id);
+          case "price_asc": return num(a.price) - num(b.price);
+          case "price_desc": return num(b.price) - num(a.price);
+          case "pages_asc": return num(a.number_of_pages) - num(b.number_of_pages);
+          case "pages_desc": return num(b.number_of_pages) - num(a.number_of_pages);
           case "title_asc": return String(a.title ?? "").localeCompare(String(b.title ?? ""));
           case "title_desc": return String(b.title ?? "").localeCompare(String(a.title ?? ""));
           default: return 0;
         }
       });
 
-      renderBooksTable(rows);
+      renderBooks(rows);
     }
 
-    function closeBooksUI() {
-      booksOpen = false;
-      booksLoadingNow = false;
-      setBtnLoading(btnLoadBooks, false);
-      btnLoadBooks.querySelector(".btn__text").textContent = "רשימת ספרים";
-
-      booksTableWrap.style.display = "none";
-      booksTableWrap.innerHTML = "";
-      booksCounter.style.display = "none";
-
-      searchInput.value = "";
-      searchInput.disabled = true;
-      sortSelect.disabled = true;
-
-      booksStatus.innerHTML = `לחצי על <b>רשימת ספרים</b> כדי לטעון את הנתונים מה־DB.`;
-    }
-
-    btnLoadBooks.addEventListener("click", async () => {
-      if (booksLoadingNow) return;
-
-      // close
-      if (booksOpen) {
-        closeBooksUI();
+    // ---- Toggle Books ----
+    btnBooks.addEventListener("click", async () => {
+      // אם כבר פתוח -> סגור
+      if (openPanel === "books") {
+        closeBooks();
         return;
       }
 
-      // open
-      booksOpen = true;
-      btnLoadBooks.querySelector(".btn__text").textContent = "סגור ספרים";
-      booksTableWrap.style.display = "block";
+      // פותחים Books וסוגרים Participants אם צריך
+      openOnly("books");
 
-      // cached
-      if (booksLoadedOnce && allBooks.length) {
+      // UI open
+      btnBooks.querySelector(".btn__text").textContent = "סגור ספרים";
+      booksWrap.style.display = "block";
+
+      // אם כבר נטען פעם אחת -> רק להציג
+      if (booksLoaded) {
         searchInput.disabled = false;
         sortSelect.disabled = false;
-        applySearchAndSort();
+        applySearchSort();
         return;
       }
 
-      // load
-      booksLoadingNow = true;
-      setBtnLoading(btnLoadBooks, true, "טוען ספרים...");
-      booksStatus.innerHTML = `<span class="hint">טוען ספרים מה־DB...</span>`;
-      booksTableWrap.innerHTML = "";
+      // לטעון עם ספינר
+      setBtnLoading(btnBooks, true, "טוען ספרים...");
+      booksStatus.textContent = "טוען ספרים מה־DB...";
+      booksWrap.innerHTML = "";
       booksCounter.style.display = "none";
 
       try {
         allBooks = await fetchJson("/api/books");
-        booksLoadedOnce = true;
+        booksLoaded = true;
 
         searchInput.disabled = false;
         sortSelect.disabled = false;
-        applySearchAndSort();
+        applySearchSort();
       } catch (e) {
-        closeBooksUI();
+        closeBooks();
         booksStatus.innerHTML = `<span class="error">שגיאה בטעינת ספרים: ${escapeHtml(e.message)}</span>`;
-        return;
       } finally {
-        booksLoadingNow = false;
-        setBtnLoading(btnLoadBooks, false);
-        btnLoadBooks.querySelector(".btn__text").textContent = "סגור ספרים";
+        setBtnLoading(btnBooks, false);
+        if (openPanel === "books") btnBooks.querySelector(".btn__text").textContent = "סגור ספרים";
       }
     });
 
-    searchInput.addEventListener("input", () => { if (booksOpen) applySearchAndSort(); });
-    sortSelect.addEventListener("change", () => { if (booksOpen) applySearchAndSort(); });
+    searchInput.addEventListener("input", () => { if (openPanel === "books") applySearchSort(); });
+    sortSelect.addEventListener("change", () => { if (openPanel === "books") applySearchSort(); });
 
-    // ---------- PARTICIPANTS ----------
-    const btnLoadParticipants = document.getElementById("btnLoadParticipants");
-    const participantsStatus = document.getElementById("participantsStatus");
-    const participantsList = document.getElementById("participantsList");
-
-    let participantsOpen = false;
-    let participantsLoadedOnce = false;
-    let cachedParticipants = [];
-    let participantsLoadingNow = false;
-
-    function closeParticipantsUI() {
-      participantsOpen = false;
-      participantsLoadingNow = false;
-      setBtnLoading(btnLoadParticipants, false);
-      btnLoadParticipants.querySelector(".btn__text").textContent = "הצג משתתפים";
-
-      participantsList.style.display = "none";
-      participantsList.innerHTML = "";
-      participantsStatus.innerHTML = `לחצי על <b>הצג משתתפים</b> כדי להציג את הרשימה.`;
-    }
-
-    btnLoadParticipants.addEventListener("click", async () => {
-      if (participantsLoadingNow) return;
-
-      // close
-      if (participantsOpen) {
-        closeParticipantsUI();
+    // ---- Toggle Participants ----
+    btnParticipants.addEventListener("click", async () => {
+      // אם כבר פתוח -> סגור
+      if (openPanel === "participants") {
+        closeParticipants();
         return;
       }
 
-      // open
-      participantsOpen = true;
-      btnLoadParticipants.querySelector(".btn__text").textContent = "סגור משתתפים";
+      // פותחים משתתפות וסוגרים Books אם צריך
+      openOnly("participants");
 
-      // cached
-      if (participantsLoadedOnce && cachedParticipants.length) {
-        participantsList.style.display = "block";
+      // UI open
+      btnParticipants.querySelector(".btn__text").textContent = "סגור משתתפים";
+      participantsList.style.display = "block";
+
+      // אם כבר נטען -> להציג מהקאש
+      if (participantsLoaded) {
+        participantsList.innerHTML = participantsCache.map(n => `<li>${escapeHtml(n)}</li>`).join("");
         participantsStatus.innerHTML = `<span class="ok">המשתתפות הוצגו בהצלחה.</span>`;
         return;
       }
 
-      // load
-      participantsLoadingNow = true;
-      setBtnLoading(btnLoadParticipants, true, "טוען...");
-      participantsStatus.innerHTML = `<span class="hint">טוען משתתפות...</span>`;
-      participantsList.style.display = "none";
+      // טוען עם ספינר
+      setBtnLoading(btnParticipants, true, "טוען...");
+      participantsStatus.textContent = "טוען משתתפות...";
       participantsList.innerHTML = "";
 
       try {
         const parts = await fetchJson("/api/participants");
-        cachedParticipants = parts || [];
-        participantsLoadedOnce = true;
 
-        participantsList.innerHTML = cachedParticipants.map(p => {
+        participantsCache = (parts || []).map(p => {
           const name =
             (typeof p === "string") ? p :
             (p.name ?? p.full_name ?? p.fullName ?? "");
-          return `<li>${escapeHtml(name)}</li>`;
-        }).join("");
+          return name || "";
+        }).filter(Boolean);
 
-        participantsList.style.display = "block";
+        participantsLoaded = true;
+
+        participantsList.innerHTML = participantsCache.map(n => `<li>${escapeHtml(n)}</li>`).join("");
         participantsStatus.innerHTML = `<span class="ok">המשתתפות הוצגו בהצלחה.</span>`;
       } catch (e) {
-        closeParticipantsUI();
+        closeParticipants();
         participantsStatus.innerHTML = `<span class="error">שגיאה בטעינת משתתפות: ${escapeHtml(e.message)}</span>`;
-        return;
       } finally {
-        participantsLoadingNow = false;
-        setBtnLoading(btnLoadParticipants, false);
-        btnLoadParticipants.querySelector(".btn__text").textContent = "סגור משתתפים";
+        setBtnLoading(btnParticipants, false);
+        if (openPanel === "participants") btnParticipants.querySelector(".btn__text").textContent = "סגור משתתפים";
       }
     });
-
-    // Hide spinners by default
-    document.querySelectorAll(".spinner--btn").forEach(s => s.style.display = "none");
   </script>
 </body>
 </html>
